# Copyright 2015-2016 Jason Ozias
#
# This file is part of rl-sys.
#
# rl-sys is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# rl-sys is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with rl-sys.  If not, see <http://www.gnu.org/licenses/>.

[package]
authors = ["Jason Ozias <jason.g.ozias@gmail.com>"]
build = "build.rs"
description = "Native bindings to libreadline."
documentation = "https://rustyhorde.github.io/readline-sys/readline-sys/rl_sys/index.html"
homepage = "https://rustyhorde.github.io/readline-sys/index.html"
keywords = ["readline", "readline-sys", "rl-sys"]
license = "GPL-3.0"
links = "readline"
name = "rl-sys"
repository = "https://github.com/rustyhorde/readline-sys.git"
version = "0.5.3-pre.0"

[build-dependencies]
pkg-config = "~0.3.6"
vergen = "~0.1.0"

[dependencies]
bitflags = "~0.7.0"
errno = "~0.1.5"
libc = "~0.2.2"
log = "~0.3.4"
time = "~0.1.34"

[dependencies.clippy]
optional = true
version = "~0.0.76"

[dev-dependencies]
sodium-sys = "~0.0.4"

[features]
default = []
lint = ["clippy"]

[lib]
name = "rl_sys"
